syntax = "proto3";

option java_multiple_files = true;
option java_package = "avto.rent";
option java_outer_classname = "RentralGrpcProto";

// The rental service definition.

service RentalCommandService {
  rpc CreateRental (CreateRentalRequest) returns (RentalResponse);
  rpc UpdateRental (UpdateRentalRequest) returns (RentalResponse);
  rpc DeleteRental (DeleteRentalRequest) returns (RentalResponse);
}

service RentalQueryService {
  rpc GetRental (GetRentalRequest) returns (RentalResponse);
}

// Request to create a rental
message CreateRentalRequest {
  string userId = 1;
  string avtoId = 2;
  string startDate = 3;
  string endDate = 4;
}

// Request to get a rental by ID
message GetRentalRequest {
  string rentalId = 1;
}

// Request to update a rental
message UpdateRentalRequest {
  string rentalId = 1;
  string userId = 2;
  string avtoId = 3;
  string startDate = 4;
  string endDate = 5;
  string status = 6;

}

// Request to delete a rental
message DeleteRentalRequest {
  string rentalId = 1;
}

// Response containing rental details
message RentalResponse {
  string rentalId = 1;
  string userId = 2;
  string avtoId = 3;
  string startDate = 4;
  string endDate = 5;
  string status = 6;
}
